# GioBot

./: .gitignore  LICENSE  Pipfile  README.md  bot.py  pyproject.toml
bot_dialogflow/: dialogo.py
charada/: charada.py
git/: git_api_user.py
ranking/: db.txt  ranking.py
youtube_api/: get_subs.py
